Fix overflowing elements

--- a/packages/extension/public/style/reef-styles.css
+++ b/packages/extension/public/style/reef-styles.css
@@ -356,10 +356,3 @@ svg.fill-white {
 .text-center{
   text-align: center;
 }
-
-.jarRFH,
-.hUmkYm {
-  position: fixed !important;
-  bottom: 0 !important;
-  right: 0 !important;
-}
